# fnkpy

./: .gitignore  README.md  REWRITE.md  pyproject.toml
dev/: fnk.py
fn/: fn.py
fnk/: fnk.py  parser.py
